--- a/style.css
+++ b/style.css
@@ -358,7 +358,8 @@ body::before {
 
 .chat-messages:not(.has-welcome) {
   padding: 2rem 0;
-  padding-bottom: calc(var(--input-height) + 2rem);
+  /* Added 70vh to padding to allow scrolling last prompt to top */
+  padding-bottom: calc(70vh + var(--input-height) + 2rem);
 }
 
 /* Welcome Screen - Premium redesign */
@@ -1475,7 +1476,8 @@ body::before {
     }
     
     .chat-messages:not(.has-welcome) {
-        padding-bottom: calc(var(--input-height) + 1.25rem);
+        /* Added 70vh to padding to allow scrolling last prompt to top */
+        padding-bottom: calc(70vh + var(--input-height) + 1.25rem);
     }
 }
 
