--- a/style.css
+++ b/style.css
@@ -1510,7 +1510,7 @@ body::before {
     
     .message-user {
         padding: 0 1rem;
-        margin-bottom: 0.5rem;
+        margin-bottom: 0;
     }
     
     .welcome-content {
